--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "faker": "^5.5.3",
     "fs": "0.0.1-security",
     "knex": "^0.95.11",
     "mongoose": "^6.0.11",
