--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "knex": "^0.95.11",
     "mongoose": "^6.0.11",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.1",
     "socket.io": "^4.2.0",
     "sqlite3": "^5.0.2"
   },
